# ot-harjoitustyo

./: .coverage  .gitignore  README.md  pyproject.toml  tasks.py
dokumentointi/: Arkkitehtuuri.md  Tuntikirjanpito  Tuntikirjanpito.md  vaatimusaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: .coverage  tasks.py
laskarit/viikko2/maksukortti/src/htmlcov/: _home_mcsauren__cache_pypoetry_virtualenvs_maksukortti-ycjdNGGm-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_mcsauren__cache_pypoetry_virtualenvs_maksukortti-ycjdNGGm-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_mcsauren__cache_pypoetry_virtualenvs_maksukortti-ycjdNGGm-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_mcsauren__cache_pypoetry_virtualenvs_maksukortti-ycjdNGGm-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  _home_mcsauren__cache_pypoetry_virtualenvs_maksukortti-ycjdNGGm-py3_8_lib_python3_8_site-packages__pytest__code_source_py.html  _home_mcsauren__cache_pypoetry_virtualenvs_maksukortti-ycjdNGGm-py3_8_lib_python3_8_site-packages__pytest__io___init___py.html  (+95 more)
laskarit/viikko3/: viikko3.txt
src/: budget.py  database_connection.py  index.py  initialize_database.py  pyproject.toml  user.py
src/repositories/: budget_repository.py  user_repository.py
src/services/: budget_service.py
src/tests/: .coverage  user_test.py
src/ui/: budget_view.py  list_view.py  login_view.py  new_user_view.py  ui.py
(+105 files in other folders)
