[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Kelttipekoni <mikko.saurento@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^3.0"
invoke = "^1.5.0"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
